[package]
name = "raspberrypi_iot_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.1.14", default-features = false, features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-async-std-rustls", "runtime-tokio-rustls", "macros", "debug-print", "seaography", "with-uuid", "with-chrono", "with-json", "with-bigdecimal", "with-time"] }
sea-orm-migration = { version = "1.1.14", default-features = false, features = ["runtime-tokio-rustls", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
